MD-2004-05-26-1: Bugfix:    -some small path problems
                 Review:    RH
                 Changed    inst_sge

JG-2004-05-26-1: Enhancem.: Add script and utility for checkpointing and cleanup
                            of transaction log in case of Berkeley DB spooling 
                            with RPC server.
                 Review:    pending

MD-2004-05-26-0: Bugfix:    - refixed file perms setting of /tmp/configuration
                            - MoveLog procedure
                 Review:    RH
                 Changed:   inst_sge

SG-2004-05-26-0: Bugfix:    fixed a scheduler crash. The scheduler crashed
                            when the host settings were not straight forward,
                            and not all load values were delivered.
                 Review:    AA
                 Changed:   scheduler

JG-2004-05-26-0: Bugfix:    Fixed several memory leaks in qmaster.
                 Review:    SG

JG-2004-05-25-1: Testsuite: Fixed testsuite installation in csp mode.

BD-2004-05-25-0: Bugfix:    - Use -ldb$(BDB_LIB_SUFFIX) instead of bare
                              -ldb in utilbin/Makefile.

AA-2004-05-25-0: Bugfix:    - man page sched_conf
                            - qmon_help.ad
                            - Q helpbox visible lines
                 Issue:     448           
                 Changed:   qmon, doc
                 
MD-2004-05-25-1: Buxfix:    - delete spool dir, message was not shown
                            - setting file perms to /tmp/configuration
                            - asking for SGE_ROO/SGE_CELL during uninst, 
                              if not set
                 Changed:   inst_sge

DT-2004-05-25-0: Bugfix:    o Fixed build for Solaris make
                            o Changed DRMAA job usage to unscaled
                 Changed:   DRMAA, execd Makefile

SG-2004-05-25-2: Bugfix:    removed a compiler warrning in event master
                 Changed:   qmaster