@@ -1,3 +1,8 @@
+MD-2004-05-26-2: Bugfix:    -csp option does not recognize secure binaries
+                 Review:    AS
+                 Changed:   inst_sge
+                 Issue:     1065
+
 MD-2004-05-26-1: Bugfix:    -some small path problems
                  Review:    RH
                  Changed    inst_sge
